--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ tools today- all the besic tools you need in your life of tech
 <br>
 <input type="password" placeholder="password">
 <p>Range:</p>
-<input type="range tool">
+<input type="range">
 <p>Checkbox tool:</p>
 <input type="checkbox">
 <p>date</p>
-<input type="date form">
+<input type="date">
 <p>color:</p>
-<input type="color depriciation">
+<input type="color">
 </body>
 </html>
