--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Tools today</title></head>
 <body>
-tools today- all the besic tools you need in your life of tech
+tools today- all the basic tools you need in your life of tech
 <h4>Sign up or login tools</h4>
 <input type="email" placeholder="email">
 <br>
